Fix property card action button not showing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,3 +28,7 @@ body {
     margin: 0 auto;
     width: 100%;
 }
+
+.property-listing .v-card-actions {
+    margin-top: -3.5rem !important;
+}
